syntax = "proto3";

package protobuf;

option go_package = "github.com/hoitek/Maja-Service;protobuf";

message OTP {
  int64 user_id = 1;
  string target = 2;
  string code = 3;
  int64 reason = 4;
}

message Email {
  string recipient = 1;
  string subject = 2;
  string body = 3;
}

message OTPRequest {
  OTP otpEntry = 1;
}

message EmailRequest {
  Email emailEntry = 1;
}

message OTPResponse {
  string result = 1;
}

message EmailResponse {
  string result = 1;
}

service OTPService {
  rpc SendOTP(OTPRequest) returns (OTPResponse);
}

service EmailService {
  rpc SendEmail(EmailRequest) returns (EmailResponse);
  rpc SendEmailSMTP(EmailRequest) returns (EmailResponse);
}